--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <!-- class closing use for add content in css use after add entity code sign wronge   -->
               <!-- use for control menu option  -->
                  <ul class="menu">
-                <li><a href="index.html">MOIVES</a></li>
+                <li><a href="index.html" >MOIVES</a></li>
                  <li><a href="cinema.html">cinema</a></li>
-                 <li><a href="promotion.html">promotion</a></li>
+                 <li><a href="promotion">promotion</a></li>
                  <li><a href="new.html">new & activity</a></li>
                  <li><a href="contact.html">contacts us</a></li>
                  <li><i class="fa-solid fa-magnifying-glass search"></i></li>
