--- a/cinema.html
+++ b/cinema.html
@@ -102,8 +102,8 @@
                   <!-- class closing use for add content in css use after add entity code sign wronge   -->
                     <!-- use for control menu option  -->
                   <ul class="menu">
-                       <li class="active" ><a href="">MOIVES</a></li>
-                       <li><a href="https://www.youtube.com/" >cinema</a></li>
+                       <li><a href="index.html">MOIVES</a></li>
+                       <li><a href="cinema.html" >cinema</a></li>
                        <li><a href="" >promotion</a></li>
                        <li><a href="" >new & activity</a></li>
                        <li><a href="">contacts us</a></li>
